# AlexRogalskiy

./: .eslintrc.json  .gitignore  .licensed.yml  .licenserc.yaml  .licenserc.yml  .prettierrc.yaml  Cargo.toml  Gemfile  README.md  index.js  jest.config.js  package.json
.dependabot/: config.yml
.github/: config.yml  labels.yml  settings.yml
.github/workflows/: blogpost.yml  blogposts.yml  broken-links.yml  changelog.yml  charts.yml  claim.yml  close-pending.yml  codespell.yaml  comments.yml  commitlint.yml  dependabot-validate.yml  feeds.yml  github-user-contributions.yml  label-sponsor.yml  licensed.yml  linter.yml  lock.yml  main.yaml  metrics-achievements.yml  metrics-base.yml  photoscope.yaml  profile-readme-stats.yml  release-changelog.yml  reviewdog.yml  screenshots.yml  snake.yml  sync.yml  update-readme.yml  verify-license.yml
profile-summary-card-output/: README.md
profile-summary-card-output/2077/: README.md
profile-summary-card-output/algolia/: README.md
profile-summary-card-output/apprentice/: README.md
profile-summary-card-output/aura/: README.md
profile-summary-card-output/aura_dark/: README.md
profile-summary-card-output/ayu_mirage/: README.md
profile-summary-card-output/bear/: README.md
profile-summary-card-output/blue_green/: README.md
profile-summary-card-output/blueberry/: README.md
profile-summary-card-output/buefy/: README.md
profile-summary-card-output/calm/: README.md
profile-summary-card-output/chartreuse_dark/: README.md
profile-summary-card-output/city_lights/: README.md
profile-summary-card-output/cobalt/: README.md
profile-summary-card-output/cobalt2/: README.md
profile-summary-card-output/codeSTACKr/: README.md
profile-summary-card-output/darcula/: README.md
profile-summary-card-output/dark/: README.md
profile-summary-card-output/date_night/: README.md
profile-summary-card-output/default/: README.md
profile-summary-card-output/discord_old_blurple/: README.md
profile-summary-card-output/dracula/: README.md
profile-summary-card-output/flag_india/: README.md
profile-summary-card-output/github/: README.md
profile-summary-card-output/github_dark/: README.md
profile-summary-card-output/gotham/: README.md
profile-summary-card-output/graywhite/: README.md
profile-summary-card-output/great_gatsby/: README.md
profile-summary-card-output/gruvbox/: README.md
profile-summary-card-output/highcontrast/: README.md
profile-summary-card-output/holi/: README.md
profile-summary-card-output/jolly/: README.md
profile-summary-card-output/kacho_ga/: README.md
profile-summary-card-output/maroongold/: README.md
profile-summary-card-output/material_palenight/: README.md
profile-summary-card-output/merko/: README.md
rss/: create_readme.rs  main.rs
rss/idiom/: main.rs  (+1 more)
services/: puppeteer.service.js
templates/: README.md  README.md.tpl  statistics.md  statistics.md.tpl
tests/: commons.test.js
views/: photo-marker.view.mustache
(+52 files in other folders)
