[package]
name = "rss-feeds-provider"
version = "0.1.0"
edition = "2018"
authors = ["Alexander Rogalskiy"]

[[bin]]
name = "reviewgeek-rss"
path = "rss/reviewgeek/main.rs"

[[bin]]
name = "poem-rss"
path = "rss/poem/main.rs"

[[bin]]
name = "idiom-rss"
path = "rss/idiom/main.rs"

[[bin]]
name = "slang-rss"
path = "rss/slang/main.rs"

[[bin]]
name = "saying-rss"
path = "rss/saying/main.rs"

[[bin]]
name = "phrase-rss"
path = "rss/phrase/main.rs"

[dependencies]
regex = "1.4.3"
chrono = "0.4.19"
rss = { version = "1.5", features = ["from_url"] }
