#
# Official GitHub profile page
# Copyright (C) 2021 Alexander Rogalskiy
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see https\\://www.gnu.org/licenses/.
[package]
name = "rss-feeds-provider"
authors = ["Alexander Rogalskiy"]
categories = ["rss"]
documentation = "https://github.com/AlexRogalskiy/AlexRogalskiy/wiki"
version = "0.1.0"
edition = "2020"
homepage = "https://github.com/AlexRogalskiy/AlexRogalskiy"
repository = "https://github.com/AlexRogalskiy/AlexRogalskiy"
license = "GPL-3.0"
keywords = ["rss", "feeds"]
description = """
RSS feeds reader
"""
# Keep `/` in front of `README.md` to exclude localized readmes
include = ["rss/**/*", "Cross.toml", "LICENSE", "/README.md"]

[badges]
is-it-maintained-issue-resolution = { repository = "AlexRogalskiy/AlexRogalskiy" }
is-it-maintained-open-issues = { repository = "AlexRogalskiy/AlexRogalskiy" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "reviewgeek-rss"
path = "rss/reviewgeek/main.rs"

[[bin]]
name = "poem-rss"
path = "rss/poem/main.rs"

[[bin]]
name = "idiom-rss"
path = "rss/idiom/main.rs"

[[bin]]
name = "slang-rss"
path = "rss/slang/main.rs"

[[bin]]
name = "saying-rss"
path = "rss/saying/main.rs"

[[bin]]
name = "phrase-rss"
path = "rss/phrase/main.rs"

[dependencies]
regex = "1.4.3"
chrono = "0.4.19"
rss = { version = "1.5", features = ["from_url"] }

[dev-dependencies]
clippy = "0.0.302"
